# markdown-to-wordpress

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  INBOX.md  MIGRATION_GUIDE.md  PLAN-residencies.md  PLAN.md  PROMPTS.md  README.md  SPEC-v0.1-2025-08-20.md  TODO.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_simple.py  tsconfig.json  useful_commands.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
Documentation/: HOW_TO_ACCESS_WORDPRESS.md  PROJECT_STATUS.md  SPEC-v0.2-cursor-2025-08-29.md  WORDPRESS_SETUP.md
analysis/: PLAN.md
clean/: README.md  images-all.csv  images-all.txt  pages-review.md
clean-incl-unused-images/: PROMPT-unused-images.md  generate-image-usage.py  review.md  unused-images.txt
config/: config.example.yml  mappings.example.yml
e2e/: PLAN.md  README.md  package-lock.json  package.json  test.spec.js  urls.js
etl/: README.md  run_pipeline.py  test_connection.py
image-renaming/: PLAN.md  renamings.csv
jsx-to-html/: PLAN.md
migration-steps-md/: MIGRATION_ANALYSIS.md  MIGRATION_COMPLETE.md  MIGRATION_FINAL_REPORT.md  MIGRATION_HANDLING.md
python-migration/: .env.example  MIGRATION_GUIDE.md  README.md  test_simple.py
schemas/: blog.schema.json  event.schema.json  page.schema.json  podcast.schema.json
src/: cli.py  mapper.py  parser.py  types.py  wordpress_client.py
substack/: PLAN.md
test-output/: image_usage_report.json  media_upload_map.json  migration_results.json  orphaned_images.json  prepared_content.json  test_media_map.json  test_prepared_content.json
(+122 files in other folders)
